# self_cell

./: Cargo.toml  README.md  build.rs  publish.sh  test.sh
.github/workflows/: rust.yml
benchmarks/: Cargo.toml  README.md
benchmarks/src/: benchmarks.rs  instructions.rs  lib.rs  ouroboros_cells.rs  self_cell_cells.rs  time.rs
examples/: Cargo.toml  README.md  REAME.md
examples/async_builder/: Cargo.toml  README.md
examples/async_builder/src/: main.rs
examples/fallible_dependent_construction/: Cargo.toml  README.md
examples/fallible_dependent_construction/src/: main.rs
examples/lazy_ast/: Cargo.toml  README.md
examples/lazy_ast/src/: main.rs
examples/mut_ref_to_owner_in_builder/: Cargo.toml  README.md
examples/mut_ref_to_owner_in_builder/src/: main.rs
examples/no_leak_panic/: Cargo.toml  README.md
examples/no_leak_panic/src/: main.rs
examples/owner_with_lifetime/: Cargo.toml  README.md
examples/owner_with_lifetime/src/: main.rs
src/: lib.rs  once_self_cell.rs  unsafe_once_self_cell.rs  unsafe_self_cell.rs
tests/: self_cell.rs  should_leak.rs  sync.rs  unsync.rs
tests-extra/: Cargo.toml  README.md
tests-extra/invalid/: contravariant_owner.stderr  covariant_owner_non_covariant_dependent.rs  escape_dependent.rs  escape_dependent.stderr  leak_dependent.rs  leak_outside_ref.stderr  reborrow_dependent_cyclic.stderr  swap_cell_member.rs  with_mut_stack_use.stderr  wrong_covariance.stderr  wrong_covariance_unsize_coercion.rs  wrong_covariance_unsize_coercion.stderr
tests-extra/invalid_manual/wrong_covariance/: Cargo.toml  expected.stderr
tests-extra/no_std_lib/: Cargo.toml
tests-extra/no_std_lib/src/: lib.rs
tests-extra/rust_1_85_or_newer/: Cargo.toml
tests-extra/rust_1_85_or_newer/src/: lib.rs
tests-extra/src/: lib.rs
tests/invalid/: borrow_from_stack.rs  borrow_from_stack.stderr  closure_init.rs  closure_init.stderr  contravariant_owner.rs  covariant_owner_non_covariant_dependent.stderr  leak_dependent.rs  leak_dependent.stderr  leak_outside_ref.rs  leak_outside_ref.stderr  no_from.stderr  non_static_dependent_static.rs  non_static_dependent_static.stderr  non_static_owner.rs  non_static_owner.stderr  reborrow_dependent_cyclic.rs  swap_cell_member.stderr  with_mut_stack_use.rs  with_mut_stack_use.stderr  wrong_covariance.rs  wrong_covariance.stderr
tests/invalid_manual/: Cargo.toml  README.md
tests/invalid_manual/wrong_covariance/: expected.stderr
tests/old/: playground.rs  unsync.rs
tests/old_invalid/: borrow_from_stack.rs  init_lifetime.rs  init_lifetime.stderr  no_from.rs  non_static_owner.stderr  wrong_from.rs  wrong_from.stderr
