[package]
name = "self_cell"
version = "0.10.0"
authors = ["Lukas Bergdoll <lukas.bergdoll@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

description = "Safe-to-use proc-macro-free self-referential structs in stable Rust."
readme = "README.md"
documentation = "https://docs.rs/self_cell"

repository = "https://github.com/Voultapher/self_cell"
keywords = ["lifetime", "borrowing", "self", "reference", "intrusive"]
categories = ["rust-patterns", "memory-management"]

include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]

[dev-dependencies]
once_cell = ">=1"

[features]
old_rust = [] # Polyfill some std lib parts and limit testing