[package]
name = "tests-extra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
self_cell = { path = ".." }
crossbeam-utils = "=0.8.7"
impls = "=1.0.3"
trybuild = "=1.0.37"

# Pin specific versions to ensure transitive dependencies.
serde_json = "=1.0.6"
serde = "=1.0.103"
proc-macro2 = "=1.0.43"
